infra/kong/knative-restate-go-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: knative-restate-go
  namespace: kong
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kong
      namespace: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /functions/knative-restate-go/restate
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /restate
      backendRefs:
        - group: ""
          kind: Service
          name: restate
          namespace: restate-test
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /functions/knative-restate-go/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - group: ""
          kind: Service
          name: restate
          namespace: restate-test
          port: 8080
